[package]
name = "diploma_software"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["fs", "full"]}
futures-util = "0.3.31"
open = "5.3.2"
urlencoding = "2.1.3"
plotly = "0.12.1"
