[package]
name = "diploma_software"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.43.0", features = ["fs", "full"]}
open = "5.3.2"
urlencoding = "2.1.3"
plotly = "0.12.1"
petgraph = "0.7.1"
rand = "0.8.5"
serde_json = "1.0.139"
tera = "1.20.0"
csv = "1.3.1"
serde = { version = "1.0.218", features = ["derive"] }
