[package]
name = "diploma_software"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Bitcoin transaction analysis system with web interface and LLM integration"
license = "Apache-2.0"
repository = "https://github.com/yourusername/diploma_software"
keywords = ["bitcoin", "blockchain", "transaction-analysis", "aml"]
categories = ["web-programming", "cryptography"]

[lib]
name = "diploma_software"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main-api"
path = "src/main-api.rs"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.43.0", features = ["fs", "full"]}
open = "5.3.2"
urlencoding = "2.1.3"
plotly = "0.12.1"
petgraph = "0.7.1"
rand = "0.8.5"
serde_json = "1.0.139"
tera = "1.20.0"
csv = "1.3.1"
serde = { version = "1.0.218", features = ["derive"] }
env_logger = "0.11.6"
indexmap = "2.7.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
bitcoincore-rpc-async = "3.0.1"
bitcoin = "0.32.5"
blockbook = "0.2.0"
thiserror = "2.0.12"
